force-app/main/default/objects/SystemEnhancement__c/SystemEnhancement__c.object-meta.xml
<CustomObject>
    <label>System Enhancement</label>
    <nameField>
        <displayFormat>SE-{00000000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Enhancement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>