force-app/main/default/objects/SystemEnhancement__c/fields/businessPointOfContact__c.field-meta.xml
<CustomField>
    <fullName>businessPointOfContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Point of Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>contains</operation>
            <value>Corning</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>System Enhancement</relationshipLabel>
    <relationshipName>System_Enhancement</relationshipName>
    <type>Lookup</type>
</CustomField>