force-app/main/default/objects/SystemEnhancement__c/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Contract Management</fullName>
            </value>
            <value>
                <fullName>Forecast</fullName>
            </value>
            <value>
                <fullName>Lead Management</fullName>
            </value>
            <value>
                <fullName>MTO</fullName>
            </value>
            <value>
                <fullName>Opportunity Management</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Quotes</fullName>
            </value>
            <value>
                <fullName>Reports and Dashboards</fullName>
            </value>
            <value>
                <fullName>Samples</fullName>
            </value>
            <value>
                <fullName>Security and Data Management</fullName>
            </value>
            <value>
                <fullName>Spec to Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>