force-app/main/default/objects/SystemEnhancement__c/fields/declineReason__c.field-meta.xml
<CustomField>
    <fullName>declineReason__c</fullName>
    <label>Decline Reason</label>
    <type>TextArea</type>
</CustomField>