force-app/main/default/objects/SystemEnhancement__c/fields/priority__c.field-meta.xml
<CustomField>
    <fullName>priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>priority</valueSetName>
    </valueSet>
</CustomField>