force-app/main/default/objects/SystemEnhancement__c/fields/productionTargetDate__c.field-meta.xml
<CustomField>
    <fullName>productionTargetDate__c</fullName>
    <label>Production Target Date</label>
    <type>Date</type>
</CustomField>