force-app/main/default/objects/SystemEnhancement__c/fields/sequence__c.field-meta.xml
<CustomField>
    <fullName>sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>