force-app/main/default/objects/SystemEnhancement__c/fields/subject__c.field-meta.xml
<CustomField>
    <fullName>subject__c</fullName>
    <label>Subject</label>
    <length>120</length>
    <type>Text</type>
</CustomField>