force-app/main/default/objects/SystemEnhancement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>subject__c</columns>
    <columns>priority__c</columns>
    <columns>Status__c</columns>
    <columns>category__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>businessPointOfContact__c</columns>
    <columns>sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>