force-app/main/default/objects/SystemEnhancement__c/listViews/All_Open_Enhancement_Items.listView-meta.xml
<ListView>
    <fullName>All_Open_Enhancement_Items</fullName>
    <columns>NAME</columns>
    <columns>subject__c</columns>
    <columns>priority__c</columns>
    <columns>category__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>businessPointOfContact__c</columns>
    <columns>sequence__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Duplicate,Declined</value>
    </filters>
    <label>All - Open Enhancement Items</label>
</ListView>