force-app/main/default/objects/SystemEnhancement__c/listViews/Completed.listView-meta.xml
<ListView>
    <fullName>Completed</fullName>
    <columns>NAME</columns>
    <columns>subject__c</columns>
    <columns>priority__c</columns>
    <columns>Status__c</columns>
    <columns>category__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed</label>
</ListView>