force-app/main/default/objects/SystemEnhancement__c/listViews/New.listView-meta.xml
<ListView>
    <fullName>New</fullName>
    <columns>NAME</columns>
    <columns>subject__c</columns>
    <columns>priority__c</columns>
    <columns>Status__c</columns>
    <columns>category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New</label>
    <language>en_US</language>
</ListView>